# StatusForge

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: gold_statuses.jsonl  marketing_gold.jsonl  program_gold.jsonl
docs/: calibration.md  calibration_marketing.md  calibration_program.md  calibration_software.md
rulebooks/: marketing.yaml  program.yaml  software.yaml
scripts/: run_calibration.py
statusforge/: calibration.py  dataset.py  engine.py  extract.py  models.py  narrate.py  providers.py  rulebook.py
tests/: test_calibration.py  test_engine.py  test_exec_summary.py  test_extract.py  test_missing_signal.py  test_rulebook.py
